Add delete endpoint and small fixes
